jenkins/jenkins-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-port
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-jnlp
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 50000
      protocol: TCP
      targetPort: 50000
    # nodePort: 50000  #  use with type: NodePort
  selector:
    app.kubernetes.io/name: jenkins
