jenkins/jenkins-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        #   - path: /hello-world-one(/|$)(.*)
        #     pathType: Prefix
        #     backend:
        #       service:
        #         name: helloworld-one
        #         port:
        #           number: 80
        #   - path: /hello-world-two(/|$)(.*)
        #     pathType: Prefix
        #     backend:
        #       service:
        #         name: helloworld-two
        #         port:
        #           number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service-port
                port:
                  number: 8080
